test/corpus/Acc.test
==========
Accumulator
==========
asl A
ror A
---
(source_file
    (instruction
        (mnemonic)
        (operand (accumulator)))
    (instruction
        (mnemonic)
        (operand (accumulator))))
